duck/test/fail/result_mismatch.duck
import base

f :: Char -> Int
f x = x

_ = f 'x'
